--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
         - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
+    - openssl version
     - openssl aes-256-cbc -K $encrypted_7e190c3d601f_key -iv $encrypted_7e190c3d601f_iv -in service-account.json.enc -out service-account.json -d
     - curl https://sdk.cloud.google.com | bash > /dev/null;
     - source $HOME/google-cloud-sdk/path.bash.inc
